<resources>
    <string name="app_name">CoffeeCafe</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="_2">2</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="_10">$10</string>
    <string name="order">Order</string>
    <string name="Quantity">Quantity :</string>
    <string name="Whipped_Cream">Added Whipped Cream?</string>
    <string name="Added_Chocolate">Added Chocolate?</string>
    <string name="Thank_you">Thank You!</string>
</resources>