<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/personName_EditText"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/toppings"
            />

        <CheckBox
            android:id="@+id/Whipped_cream_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/Chocolate_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:onClick="decrement"
                android:text="-"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/_2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:onClick="increment"
                android:text="+"
                android:textAllCaps="true" />

        </LinearLayout>

        <TextView
            android:padding="8dp"
            android:text="@string/order_summary"
            style="@style/HeaderTextStyle"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/_10"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>